Salesforce/main/default/objects/Requisicao_de_compra__c/Requisicao_de_compra__c.object-meta.xml
<CustomObject>
    <label>Estimativas</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Número de requisito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimativas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>