Salesforce/main/default/objects/Requisicao_de_compra__c/fields/Cantidad_Productos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Productos__c</fullName>
    <label>Cantidad Productos</label>
    <summaryForeignKey>Produto_de_Requisicao__c.Requisicao_de_compra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>