Salesforce/main/default/objects/Requisicao_de_compra__c/fields/Cultura__c.field-meta.xml
<CustomField>
    <fullName>Cultura__c</fullName>
    <label>Cultura</label>
    <length>80</length>
    <type>Text</type>
</CustomField>