Salesforce/main/default/objects/Requisicao_de_compra__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <label>Pendente de análise</label>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
            <value>
                <fullName>Edição</fullName>
                <default>true</default>
                <label>Edição</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>