Salesforce/main/default/objects/Requisicao_de_compra__c/fields/Requisicao_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Requisicao_de_compra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número da Estimativa Subsequente</label>
    <referenceTo>Requisicao_de_compra__c</referenceTo>
    <relationshipName>Requisitos_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>