Salesforce/main/default/objects/Requisicao_de_compra__c/fields/Responsavel_y_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_y_Tipo__c</fullName>
    <formula>CASESAFEID(OwnerId) + &quot;-&quot; + TEXT(Tipo__c)</formula>
    <label>Responsavel y Tipo</label>
    <type>Text</type>
</CustomField>