Salesforce/main/default/objects/Requisicao_de_compra__c/fields/Safra_marca_y_regiao__c.field-meta.xml
<CustomField>
    <fullName>Safra_marca_y_regiao__c</fullName>
    <formula>TEXT(Safra__c) + &apos;-&apos; + TEXT(Marca__c) + &apos;-&apos; + TEXT(Regiao_comercial__c)+ &apos;-&apos; + TEXT(Tipo__c)</formula>
    <label>Safra marca regiao y tipo</label>
    <type>Text</type>
</CustomField>