Salesforce/main/default/objects/Requisicao_de_compra__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiplicador</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Gerente Comercial</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
                <isActive>false</isActive>
                <label>Gerente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>