Salesforce/main/default/objects/Requisicao_de_compra__c/recordTypes/Soja.recordType-meta.xml
<RecordType>
    <fullName>Soja</fullName>
    <active>true</active>
    <label>Soja</label>
</RecordType>