Salesforce/main/default/objects/Requisicao_de_compra__c/listViews/Supervisor.listView-meta.xml
<ListView>
    <fullName>Supervisor</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Requisicao_de_compra__c</columns>
    <columns>Marca__c</columns>
    <columns>Multiplicador__c</columns>
    <columns>Estado__c</columns>
    <columns>Safra__c</columns>
    <columns>Regiao_comercial__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>Supervisor</value>
    </filters>
    <label>Supervisor</label>
</ListView>