Salesforce/main/default/objects/Requisicao_de_compra__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Requisicao_de_compra__c</columns>
    <columns>Marca__c</columns>
    <columns>Multiplicador__c</columns>
    <columns>Estado__c</columns>
    <columns>Safra__c</columns>
    <columns>Regiao_comercial__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>